<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.andypro.mylocations.MapActivity">
    <item
        android:id="@+id/map_type_basic"
        android:icon="@drawable/ic_action_road"
        android:title="@string/map_type_basic"
        app:showAsAction="always" />
    <item
        android:id="@+id/map_type_satellite"
        android:icon="@drawable/ic_action_satellite"
        android:title="@string/map_type_satellite"
        app:showAsAction="always" />
    <item
        android:id="@+id/map_type_hybrid"
        android:icon="@drawable/ic_action_sigma"
        android:title="@string/map_type_hybrid"
        app:showAsAction="always" />
    <item
        android:id="@+id/map_type_terrain"
        android:icon="@drawable/ic_action_landscape"
        android:title="@string/map_type_terrain"
        app:showAsAction="always" />
</menu>
